discussion/kv_engine/170541/170541_rev24_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-16 20:30:34.000000000
Message: 
Uploaded patch set 24.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-16 20:44:53.000000000
Message: 
Patch Set 24: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15673/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15673/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15673/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17746/ : FAILURE

Failure of GoogleTest "STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction":

<pre>
[ RUN      ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
[2022-02-16T20:39:20.895Z] ../kv_engine/engines/ep/tests/module_tests/magma_bucket_tests.cc:554: Failure
[2022-02-16T20:39:20.895Z] Value of: result
[2022-02-16T20:39:20.895Z]   Actual: true
[2022-02-16T20:39:20.895Z] Expected: false
[2022-02-16T20:39:20.895Z] [  FAILED  ] STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction, where GetParam() = ("persistent_magma", "full_eviction") (74 ms)
STParamMagmaBucketTest/STParamMagmaBucketTest.MB_47566/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17746/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44010/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37100/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5322/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17428/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25831/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5383/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 09:42:00.000000000
Message: 
Patch Set 24: Verified+1

Only failure is MB-51011
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 09:42:05.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 09:45:16.000000000
Message: 
Patch Set 24:

clang-tidy is being a pain again...
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-17 10:05:14.000000000
Message: 
Patch Set 24: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15673/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15673/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15673/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17748/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14520/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44010/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37100/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16491/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5322/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17428/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18464/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25831/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5383/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-02-17 11:13:22.000000000
Message: 
Patch Set 24: Code-Review-1

(4 comments)
Line:131, executor/custom_folly_cpu_thread_pool_executor.h -> Please move out-of-line.

Line:132, executor/custom_folly_cpu_thread_pool_executor.h -> Note: It's probably more flexible (and performant - less copying etc) to just have this function return a std::vector<GlobalTask*> and then the caller can do whatever they want with the found elements. 

(Callbacks are nice if the ownership semantics of something hasn't changed and one wants to simply "tell" the caller about all elements some opaque collection, but if a class has essentially finished with the data then passing it back to the caller is a nicer separation of responsibilities IMO).

Line:145, executor/custom_folly_cpu_thread_pool_executor.h -> Do we need a second tasksToPushBack vector? Couldn't we just return them directly to the queue here?

Line:532, executor/folly_executorpool.cc -> Not sure about the use of force here - if the task is already scheduling (and running) on CPU pool, are we safe to reset the TaskPtr / remove from locator?

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 12:48:13.000000000
MISMATCHED INLINE COMMENT
Line:131, executor/custom_folly_cpu_thread_pool_executor.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 12:48:13.000000000
MISMATCHED INLINE COMMENT
Line:132, executor/custom_folly_cpu_thread_pool_executor.h -> Done
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 12:48:13.000000000
MISMATCHED INLINE COMMENT
Line:145, executor/custom_folly_cpu_thread_pool_executor.h -> Kind of. If we pushed back into tasks then we'd loop until tasks was empty (no more work to do) which may never happen. This guarantees that we drain the queue (as we run on the scheduler thread) without doing extra work (which we would if we tried to count n elements as we pop them if a cpuPool thread runs and pops something while we run this)
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-02-17 12:48:13.000000000
MISMATCHED INLINE COMMENT
Line:532, executor/folly_executorpool.cc -> Yes. If we've just popped the task from the CancellableCPUExecutor and returned it then the cpuPool executor isn't actually going to run it. We don't have the TaskProxy this deep enough to reset scheduledOnCpuPool (logically it no longer is).
----------------------------------------------------------------------------------------------------------------------
